# workshop

./: .dockerignore  Cargo.toml  Dockerfile  assignment_1A.py  assignment_1A_test.py
src/: geometry.rs  main.rs  test.py
src/projects/: boids.rs  digits_to_zero.rs  distance_between_points.rs  epicyclogons.rs  epicycloids.rs  game_of_life.rs  recursive_rotation.rs  tesselation_editor.rs  three_points.rs
src/projects/severance/: colors.rs  contour_lines.rs  four_tempers.rs
src/projects/tesselations/: tesselation_editor.rs
