cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "workshop"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy-inspector-egui = "0.27.0"
enum-iterator = "2.1.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.server-dev]
inherits = "dev"
codegen-backend = "cranelift"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/mold", "-Zcodegen-backend=cranelift"]
